kubernetes/ingress-bkp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-dotnet-ingress
  labels:
    app: webapp-angular
    tier: ingress-resource
    app-version: v2.0.0
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # If your Angular app set the base-href with / then you need to set the app without any path e.g. http://foo/
      - path: /
        pathType: Prefix
        backend:
          service:
            name: angular-svc
            port:
              number: 4200
